# kokoro-emotion-control

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/martin/: f0_contour_joy_final.pth  f0_contour_sadness_anger_final.pth
checkpoints/victoria/: f0_contour_joy_final.pth  f0_contour_sadness_anger_final.pth
configs/: martin.yaml  victoria.yaml
docs/: architecture.md  limitations.md  usage.md
emotion_tts/: __init__.py  api.py  backend.py  parser.py  prosody.py  registry.py  router.py
examples/: demo.txt
scripts/: render.py  smoke_test.py
styles/martin_p05/: style_Angst.pt  style_Angst_mean.pt  style_Angst_mid.pt  style_Angst_soft.pt  style_Angst_strong.pt  style_Ekel.pt  style_Ekel_mean.pt  style_Ekel_mid.pt  style_Ekel_soft.pt  style_Ekel_strong.pt  style_Freude.pt  style_Freude_mean.pt  style_Freude_mid.pt  style_Freude_soft.pt  style_Freude_strong.pt  style_Langeweile.pt  style_Langeweile_mean.pt  style_Langeweile_mid.pt  style_Langeweile_soft.pt  style_Langeweile_strong.pt  style_Neutral.pt  style_Neutral_mean.pt  style_Neutral_mid.pt  style_Neutral_soft.pt  style_Neutral_strong.pt  style_Trauer.pt  style_Trauer_mean.pt  style_Trauer_mid.pt  style_Trauer_soft.pt  style_Trauer_strong.pt  style_Wut.pt  style_Wut_mean.pt  style_Wut_mid.pt  style_Wut_soft.pt  style_Wut_strong.pt  style_manifest.json
styles/victoria_p05/: style_Angst.pt  style_Angst_mean.pt  style_Angst_mid.pt  style_Angst_soft.pt  style_Angst_strong.pt  style_Ekel.pt  style_Ekel_mean.pt  style_Ekel_mid.pt  style_Ekel_soft.pt  style_Ekel_strong.pt  style_Freude.pt  style_Neutral.pt  (+24 more)
(+4 files in other folders)
